use promises to make milestone processing sctrictly sequential

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": ">= 1.0.0"
   },
   "dependencies": {
+    "bluebird": "^2.3.11",
     "irc": ">= 0.3.6",
     "mongojs": ">= 0.14.2",
     "promised-mongo": "^0.11.1"
