--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bluebird": "^2.3.11",
     "irc": ">= 0.3.6",
+    "marked": "^0.3.2",
     "mongojs": ">= 0.14.2",
     "promised-mongo": "^0.11.1"
   },
