--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "irc": ">= 0.3.9",
     "marked": "^0.3.2",
     "mongojs": ">= 0.14.2",
-    "promised-mongo": "^0.11.1"
+    "promised-mongo": "^0.11.1",
+    "mathjs": ">= 2.4.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
