--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "bluebird": "^2.3.11",
-    "irc": ">= 0.3.12",
+    "irc": "^0.5.1",
     "marked": "^0.3.2",
     "mongojs": ">= 0.14.2",
     "promised-mongo": "^0.11.1",
